
exp6

20211126
1。对SysYFIR.md做了一定修改，包括写错的地方、说得不够清楚的地方、内容要点顺序不一致的地方。SysYFIR.md中出现了cminus，似乎是从隔壁班抄来的？
2。task1的ll文件编写
3。填写task1的思考题

20211127
1。修复原本给出的demo中的错误(ConstantFloat写错了)
2。完成task2
3。完成task3的表达式相关部分
4。对SysYFIR.md中的getelementptr做出更多解释，为实现多维数组做准备

20211128
1。修复左值问题
2。修复task2，左值错误，分支跳转错误，以及未输出结果的问题
3。完成task3的控制流与条件表达式相关部分
4。完成所有思考题

20211130
1。完成task3的声明部分
2。修复全局变量初始化问题，采用C++实现，先全部初始化为0再计算和store
3。类型转换和store分别单独创建了一个函数
4。实现简单字面量计算
5。修复return的值如果是字面值的类型转换
6。修复初始化函数忘记return
7。实现单目逻辑表达式
8。完善控制流部分，逻辑表达式中的类型转换，左值转右值。实现短路计算
9。目前20个测试样例全部通过
10。修复之前pull request对于BlockStmt跳过编译的bug，如while(1){if(1)break; int a=1;}，错误地把break后面的跳过了
11。修复同一函数内跳转标签同名问题


